# Paddle

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  README_cn.md  README_ja.md  SECURITY.md  _typos.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: CheckPRTemplate.yml  Codestyle-Check.yml  PR-CI-Clone.yml  check-bypass.yml
cmake/: cinn.cmake  coverallsGcovJsons.cmake  cuda.cmake  hip.cmake  inference_lib.cmake  operators.cmake  simd.cmake  third_party.cmake  unity_build.cmake  version.cmake
cmake/cinn/: core.cmake
paddle/: CMakeLists.txt
paddle/cinn/: CMakeLists.txt
paddle/common/: ddim.h  flags.cc  flags.h  flags_native.cc  layout.h
paddle/fluid/: CMakeLists.txt
paddle/fluid/platform/: CMakeLists.txt  densetensor_printer.cc  gloo_context.cc  init.cc
paddle/fluid/platform/device/ipu/: ipu_executor.cc  ipu_utils.h
paddle/fluid/platform/profiler/: cupti_data_process.cc  profiler.cc
paddle/fluid/platform/profiler/custom_device/: custom_tracer.cc
paddle/phi/: CMakeLists.txt  README.md
paddle/scripts/: paddle_build.bat  paddle_build.sh
paddle/utils/: optional.h  pybind.cc  (+3 more)
python/: env_dict.py.in  setup.py.in  setup_cinn.py.in
test/: CMakeLists.txt
tools/: check_file_diff_approvals.sh  check_sequence_op.sh  final_ut_parallel_rule.py  gen_pybind11_stub.py  gen_ut_cmakelists.py  get_pr_title.py  get_quick_disable_lt.py  handle_h_cu_file.py  jetson_infer_op.py  parallel_UT_rule.py  print_signatures.py  prune_for_jetson.py  remove_grad_op_and_kernel.py  test_check_api_compatible.py  timeline.py
(+3091 files in other folders)
